# ChangeLog for genkernel
# Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> generic/initrd.scripts,
  generic/linuxrc:
  Add setup_hotplug() function that runs before the modules are loaded to
  setup mdev as the hotplug event handler. Add $KV to /lib/modules anywhere it
  occurs to allow for an initramfs with multiple sets of modules

  03 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> gen_configkernel.sh,
  genkernel.conf:
  Clean up OLDCONFIG logic and default to OLDCONFIG=yes. This is for bug 207895

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> generic/linuxrc:
  Moving the code to start resume operations so it doesn't run when booting
  from CD. We also don't execute the code if there's no real_resume set on the
  command line, since it will fail, anyway, without it.

  02 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> alpha/modules_load,
  ia64/modules_load, ppc/modules_load, ppc64/modules_load, um/modules_load,
  x86/modules_load, x86_64/modules_load, xen0/modules_load,
  xenU/modules_load:
  add megaraid module to MODULES_SCSI for bug 206039

  02 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> generic/modprobe:
  specify the kernel version when looking for a module for bug 208593

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.defaults, generic/initrd.scripts:
  Removed runUdev, since we no longer use it.

  11 Jan 2008; Chris Gianelloni <wolf31o2@gentoo.org> gen_initramfs.sh,
  gen_initrd.sh, genkernel:
  Fixing a problem where we were copying the busybox binary cache into the
  busybox temporary directory. I am assuming that this was a result of all of
  the changes we've been doing, and it simply just got everlooked. Thanks to
  Marek Szuba <cyberman@if.pw.edu.pl> for pointing it out in bug #204087. This
  is genkernel 3.4.9 FINAL. Enjoy.

  28 Dec 2007; Andrew Gaffney <agaffney@gentoo.org> generic/initrd.defaults,